--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .statistic{ 
     font-size: large;
     font-family: Arial, Helvetica, sans-serif; 
-    color: white;
+    color: black;
 }
 
 body {
